[Vertical Tabs] Refactor touch helper callback unit tests
Refactors VerticalTabListItemTouchHelperCallbackUnitTest:
* Add @SmallTest annotation to all test methods.
* Extract child ViewHolder and RecyclerView setup helpers.
* Group private helper methods at the bottom of the class.
* Use PropertyModel.Builder instead of mock PropertyModel.
* Replace Arrays.asList(...) with List.of(...).
* Promote all local mocks to @Mock class member variables.
* Replace assertEquals(null, ...) with assertNull(...).

Bug: 509226293

Change-Id: I491b97ebd37a68639b0ce67b552d7c76b3073108
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/8116434
Reviewed-by: Hao Dong <spdonghao@google.com>
Auto-Submit: Gazal Agarwal <agazal@google.com>
Commit-Queue: Gazal Agarwal <agazal@google.com>
Cr-Commit-Position: refs/heads/main@{#1664291}